@@ -27,21 +27,15 @@ jar {
     includeEmptyDirs false
 }
 
-// JDK7 is required for scala 2.9 and 2.10. The scala gradle plugin does not allow changing the java compiler at runtime,
-// so we must set JAVA_HOME to point to 1.7 and set the java plugin to compile with 1.8
-task requiresJava7 {
-    doLast {
-        if (!project.hasProperty('jdk7')) {
-            throw new GradleException("Please set the jdk7 property to a valid jdk1.7 path in ~/.gradle/gradle.properties")
-        }
-    }
+def compiler = javaToolchains.compilerFor {
+    languageVersion = JavaLanguageVersion.of(8)
 }
 
 // Some modules need to be compiled with JDK8.
 task requiresJava8 {
     doLast {
-        if (!project.hasProperty('jdk8')) {
-            throw new GradleException("Please set the jdk8 property to a valid jdk1.8 path in ~/.gradle/gradle.properties")
+        if (!compiler.isPresent()) {
+            throw new GradleException("Please set the 'org.gradle.java.installations.paths' property to a valid jdk1.8 path in ~/.gradle/gradle.properties")
         }
         if (!JavaVersion.current().isJava8Compatible()) {
             throw new GradleException("Please set JAVA_HOME to a 1.8 JDK (detected ${JavaVersion.current()})")
@@ -57,120 +51,186 @@ tasks.withType(ScalaCompile) {
     options.fork = true
 }
 
-compileJava.dependsOn 'requiresJava7'
-compileJava.dependsOn 'requiresJava8'
-
-compileJava.options.encoding = 'UTF-8'
-// Compile all Java projects with 1.8
-compileJava.options.fork = true
-compileJava.options.forkOptions.executable = jdk8 + '/bin/javac'
-compileJava.options.compilerArgs += '-proc:none'
-
-compileTestJava.options.encoding = 'UTF-8'
-// Compile all Java test projects with 1.8
-compileTestJava.options.fork = true
-compileTestJava.options.forkOptions.executable = jdk8 + '/bin/javac'
-compileTestJava.options.compilerArgs += '-proc:none'
-
-compileTestJava {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+java {
+    toolchain {
+        // Compile all Java projects with 1.8
+        languageVersion.set(JavaLanguageVersion.of(8))
+    }
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_7
-targetCompatibility = JavaVersion.VERSION_1_7
+tasks.withType(JavaCompile).configureEach {
+    dependsOn 'requiresJava8'
+    options.encoding = 'UTF-8'
+    options.fork = true
+    compileJava.options.compilerArgs += '-proc:none'
+}
 
-// Compile all Java projects with jdk7 bootstrap classpath (to properly support target compatibility)
-compileJava.options.bootstrapClasspath = files("${jdk7}/jre/lib/rt.jar", "${jdk7}/lib/jsse.jar")
+// Compile all Java projects with jdk8 bootstrap classpath (to properly support target compatibility)
+def jdkPath = compiler.get().metadata.installationPath.asFile.absolutePath
+compileJava.options.bootstrapClasspath = files("${jdkPath}/jre/lib/rt.jar", "${jdkPath}/jre/lib/jsse.jar")
 
 // There is no clear way to run the same task under multiple JDKs, so we use the following gradle properties
-// and jenkins matrix plugin to run the instrumentation module tests
+// and jenkins matrix plugin to run the instrumentation module tests.
+//
+// This should really use java toolchains instead of setting the executable, but in its current form, toolchains
+// can only select a JDK based on the version, vendor and implementation (i.e. J9).  Unfortunately, Zulu and Zing
+// have the same vendor, which means toolchain selection cannot differentiate between say, Zulu11 and Zing11.  This
+// will be better once https://github.com/gradle/gradle/issues/18896 is implemented, at which point the below could
+// be changed to simply select a toolchain based on appropriately specific criteria.
 //
 // These properties must be set in gradle.properties to point to the java executable.
 // For example: java8=/Library/Java/JavaVirtualMachines/jdk1.8.0_45.jdk/Contents/Home/bin/java
+//
+// Note: These test settings apply to both unit and instrumentation tests but some instrumentation tests override them in
+// their own build.gradle to force the use of a specific version of Java (e.g. instrumentation/async-http-client-2.0.0).
+// This could lead to an "Unrecognized option" with the failure "Could not create the Java Virtual Machine".
 test {
+    ext.configureTest = { String jdkName, Closure configuration ->
+        // Add an input property so that we differentiate between JDKs with the same version
+        inputs.property("test.jdk", jdkName)
+        // Null out the launcher so we can set an executable instead
+        javaLauncher.convention(null).value(null)
+        executable = project.property(jdkName) + '/bin/java'
+        configuration.call()
+    }
+    if (project.hasProperty("test18")) {
+        configureTest("jdk18") {
+            jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                    '--add-opens=java.base/java.util=ALL-UNNAMED',
+                    '--add-opens=java.base/java.net=ALL-UNNAMED',
+                    '--add-opens=java.base/java.io=ALL-UNNAMED',
+                    '--add-opens=java.base/sun.net.spi=ALL-UNNAMED',
+                    '--add-exports=java.base/sun.net.spi=ALL-UNNAMED',
+                    '--add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED'
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java18IncompatibleTest'
+            }
+        }
+    }
+    if (project.hasProperty("test17")) {
+        configureTest("jdk17") {
+            jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--add-opens=java.base/java.util=ALL-UNNAMED',
+                '--add-opens=java.base/java.net=ALL-UNNAMED',
+                '--add-opens=java.base/java.io=ALL-UNNAMED',
+                '--add-opens=java.base/sun.net.spi=ALL-UNNAMED',
+                '--add-exports=java.base/sun.net.spi=ALL-UNNAMED',
+                '--add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED'
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java17IncompatibleTest'
+            }
+        }
+    }
+    if (project.hasProperty("test16")) {
+        configureTest("jdk16") {
+            jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--add-opens=java.base/java.util=ALL-UNNAMED',
+                '--add-opens=java.base/java.net=ALL-UNNAMED',
+                '--add-opens=java.base/java.io=ALL-UNNAMED',
+                '--add-opens=java.base/sun.net.spi=ALL-UNNAMED',
+                '--add-exports=java.base/sun.net.spi=ALL-UNNAMED',
+                '--add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED'
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java16IncompatibleTest'
+            }
+        }
+    }
     if (project.hasProperty("test15")) {
-        executable = jdk15 + '/bin/java'
-        useJUnit {
-            excludeCategories 'com.newrelic.test.marker.Java15IncompatibleTest'
+        configureTest("jdk15") {
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java15IncompatibleTest'
+            }
         }
     }
     if (project.hasProperty("test14")) {
-        executable = jdk14 + '/bin/java'
-        useJUnit {
-            excludeCategories 'com.newrelic.test.marker.Java14IncompatibleTest'
+        configureTest("jdk14") {
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java14IncompatibleTest'
+            }
         }
     }
     if (project.hasProperty("test13")) {
-        executable = jdk13 + '/bin/java'
-        useJUnit {
-            excludeCategories 'com.newrelic.test.marker.Java13IncompatibleTest'
+        configureTest("jdk13") {
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java13IncompatibleTest'
+            }
         }
     }
     if (project.hasProperty("test12")) {
-        executable = jdk12 + '/bin/java'
-        useJUnit {
-            excludeCategories 'com.newrelic.test.marker.Java12IncompatibleTest'
+        configureTest("jdk12") {
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java12IncompatibleTest'
+            }
         }
     }
     if (project.hasProperty("testCoretto8")) {
-        executable = coretto8 + '/bin/java'
-        useJUnit {
-            excludeCategories 'com.newrelic.test.marker.Java8IncompatibleTest'
+        configureTest("coretto8") {
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java8IncompatibleTest'
+            }
         }
     }
     if (project.hasProperty("testDragonWell8")) {
-        executable = dragonWell8 + '/bin/java'
-        useJUnit {
-            excludeCategories 'com.newrelic.test.marker.Java8IncompatibleTest'
+        configureTest("dragonWell8") {
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java8IncompatibleTest'
+            }
         }
     }
     if (project.hasProperty("testZulu11")) {
-        executable = zulu11 + '/bin/java'
-        useJUnit {
-            excludeCategories 'com.newrelic.test.marker.Java11IncompatibleTest'
+        configureTest("zulu11") {
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java11IncompatibleTest'
+            }
         }
     }
     if (project.hasProperty("testZing8")) {
-        executable = zing8 + '/bin/java'
-        useJUnit {
-            excludeCategories 'com.newrelic.test.marker.Java8IncompatibleTest'
+        configureTest("zing8") {
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java8IncompatibleTest'
+            }
         }
     }
     if (project.hasProperty("testZing11")) {
-        executable = zing11 + '/bin/java'
-        useJUnit {
-            excludeCategories 'com.newrelic.test.marker.Java11IncompatibleTest'
+        configureTest("zing11") {
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java11IncompatibleTest'
+            }
         }
     }
     if (project.hasProperty("test11")) {
-        executable = jdk11 + '/bin/java'
-        useJUnit {
-            excludeCategories 'com.newrelic.test.marker.Java11IncompatibleTest'
+        configureTest("jdk11") {
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java11IncompatibleTest'
+            }
         }
     }
     if (project.hasProperty("test10")) {
-        executable = jdk10 + '/bin/java'
-        useJUnit {
-            excludeCategories 'com.newrelic.test.marker.Java10IncompatibleTest'
+        configureTest("jdk10") {
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java10IncompatibleTest'
+            }
         }
     }
     if (project.hasProperty("test9")) {
-        executable = jdk9 + '/bin/java'
-        useJUnit {
-            excludeCategories 'com.newrelic.test.marker.Java9IncompatibleTest'
+        configureTest("jdk9") {
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java9IncompatibleTest'
+            }
         }
     }
     if (project.hasProperty("test8")) {
-        executable = jdk8 + '/bin/java'
-        useJUnit {
-            excludeCategories 'com.newrelic.test.marker.Java8IncompatibleTest'
+        configureTest("jdk8") {
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java8IncompatibleTest'
+            }
         }
     }
     if (project.hasProperty("test7")) {
-        executable = jdk7 + '/bin/java'
-        useJUnit {
-            excludeCategories 'com.newrelic.test.marker.Java7IncompatibleTest'
+        configureTest("jdk7") {
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java7IncompatibleTest'
+            }
         }
     }
 
@@ -186,7 +246,19 @@ test {
 
 dependencies {
     testImplementation("junit:junit:4.12")
-    testImplementation("org.mockito:mockito-core:2.28.2")
+    testImplementation("org.mockito:mockito-core:3.9.0")
     testImplementation("org.hamcrest:hamcrest-library:1.3")
     testImplementation(project(":test-annotations"))
+}
+
+// Make ScalaCompile tasks cacheable.  This is a workaround for a defect fixed in Gradle 7.1.0.
+tasks.withType(ScalaCompile).configureEach {
+    options.getForkOptions().setExecutable(null)
+    def launcher = javaToolchains.launcherFor {
+        languageVersion = JavaLanguageVersion.of(8)
+    }
+    inputs.property("javaLauncherVersion", launcher.map { it.metadata.languageVersion })
+    doFirst {
+        options.getForkOptions().setExecutable(launcher.get().getExecutablePath().asFile.absolutePath)
+    }
 }
