@@ -4,14 +4,6 @@ jar {
     }
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
-
-compileTestJava {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
-}
-
 compileJava.options.bootstrapClasspath = null
 
 dependencies {
@@ -27,6 +19,12 @@ test {
     // instrumentation is incompatible with version of java less than 1.8
     onlyIf {
         !project.hasProperty('test7')
+    }
+
+    // this version of Vert.x uses some DirectBuffer things that are now hidden in its module
+    if (project.hasProperty("test16") || project.hasProperty("test17") || project.hasProperty("test18")) {
+        jvmArgs += '--add-opens=java.base/java.nio=ALL-UNNAMED'
+        jvmArgs += '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
     }
 }
 
